# agon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  nixpacks.toml  schema.json  wait_till_up.sh
.github/actions/setup/: action.yml
.github/workflows/: build-service.yml  build-ui.yml  build.yml  deploy.yml  docker-service.yml  docker-ui.yml  docker-worker.yml  docker.yml  pr.yml  release.yml  test.yml
agon_core/: Cargo.toml
agon_core/src/: error.rs  lib.rs  push.rs  search.rs  telemetry.rs
agon_core/src/dao/: accept.rs  asset.rs  audience.rs  batch.rs  client.rs  device.rs  error.rs  feed.rs  follow.rs  invitation.rs  item.rs  keys.rs  match_ops.rs  match_social.rs  mod.rs  notification.rs  page.rs  records.rs  stats.rs  team.rs  user.rs
agon_infra/: Pulumi.dev.yaml  Pulumi.staging.yaml  Pulumi.yaml  index.ts  package.json  pnpm-lock.yaml
agon_service/: Cargo.toml  Dockerfile  docker-compose.yml
agon_service/migrations/: 20250504171050_init.down.sql  20250504171050_init.up.sql
agon_service/src/: assets.rs  auth.rs  main.rs  mapping.rs  membership.rs  notification.rs  team.rs
agon_service/src/dao/: mod.rs
agon_service/src/detailed_score/: cricket.rs  football.rs  mod.rs
agon_tests/: Cargo.toml
agon_tests/tests/: api.rs
agon_ui/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  set-runtime-env.sh  vite.config.ts
agon_ui/src/: App.tsx  index.css  main.tsx
agon_ui/src/api/: index.ts
agon_ui/src/api/core/: OpenAPI.ts
agon_ui/src/api/models/: AddTeamMembersInput.ts  CreateGameInput.ts  CreateTeamInput.ts  CreateUserInput.ts  Game.ts  GameInvitation.ts  GameInvitationWithUser.ts  GameType.ts  GameWithInvitations.ts  InvitationResponse.ts  InvitationStatus.ts  Location.ts  RespondToInvitationInput.ts  Team.ts  TeamListItem.ts  User.ts
agon_ui/src/api/services/: DefaultService.ts
agon_ui/src/components/: AddGroupMemberDialog.tsx  AddTeamMemberDialog.tsx  AppSidebar.tsx  CreateGamePage.tsx  CreateGroupPage.tsx  GameDetailsPage.tsx  GameInviteLinkButton.tsx  GamesPage.tsx  GroupDetailsPage.tsx  GroupSearch.tsx  GroupsPage.tsx  InviteLinkHandler.tsx  InviteLinkManager.tsx  InviteMorePeopleDialog.tsx  LoginPage.tsx  MobileBottomNav.tsx  TeamDetailsPage.tsx  TeamsPage.tsx  ThemeToggle.tsx
agon_ui/src/components/agon/: Avatar.tsx  CopyInviteButton.tsx  EditProfileDialog.tsx  FollowButton.tsx  ImageUploadField.tsx  InvitationResponseDialog.tsx  InvitePlayers.tsx  Logo.tsx  MatchCard.preview.tsx  MatchCard.tsx  MatchComments.tsx  MatchDetailsEditor.tsx  MatchHeaderCarousel.tsx  MatchResultEditor.tsx  MultiImageUploadField.tsx  PlayerSideEditor.tsx  Profile.preview.tsx  ProfileHeader.tsx  ScoreConfirmationBar.tsx  SportBadge.tsx  SportPicker.tsx  SportStatsTable.tsx  StatusBadge.tsx  UserCard.tsx
agon_ui/src/components/auth/: CreateProfileForm.tsx  InvitePreviewBanner.tsx  LoginForm.tsx
agon_ui/src/hooks/: useApi.ts  useAssetUpload.ts  useAuth.tsx  useCurrentUserId.ts  usePendingMatches.ts  useTheme.tsx  useToggleLike.ts  useUnreadCount.ts  useUserProfile.ts
agon_ui/src/lib/: api-client.ts  api.ts  confirmation.ts  datetime.ts  members.ts  pendingInvite.ts  score.ts  sports.ts  stats.ts  supabase.ts
agon_ui/src/pages/: AcceptInvitePage.tsx  FeedPage.preview.tsx  FeedPage.tsx  FollowListPage.tsx  LogMatchPage.tsx  MatchDetailPage.tsx  NotificationsPage.tsx  ProfilePage.tsx  UserSearchPage.tsx  preview-fetch-stub.ts
agon_ui/src/utils/: group-utils.ts  jwt-debug.ts  runtime-env.ts  user-debug.ts
agon_worker/: Cargo.toml  Dockerfile
agon_worker/src/: asset_consumer.rs  config.rs  consumer.rs  error.rs  event.rs  main.rs
agon_worker/src/handlers/: index.rs  mod.rs  notify.rs  push.rs  stats.rs
agon_worker/src/temporal/: activities.rs  client.rs  mod.rs  worker.rs  workflows.rs
src/: main.rs
src/dao/: id.rs  mod.rs
