[package]
name = "agon_service"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.72.0"
uuid = { version = "1.16.0", features = ["v4"] }
dotenv = "0.15.0"
