[package]
name = "agon_service"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
dotenv = "0.15.0"
surrealdb = "2.0.4"
thiserror = "1.0.64"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
