[package]
name = "agon_core"
version = "0.1.0"
edition = "2024"

# Shared domain crate: DynamoDB DAO + record types + Meilisearch client.
# Depended on by both the API (agon_service) and the async worker (agon_worker).
# Deliberately free of any web-framework (poem) dependency.

[dependencies]
thiserror = "1.0.64"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
