[package]
name = "agon_core"
version = "0.1.0"
edition = "2024"

# Shared domain crate: DynamoDB DAO + record types + Meilisearch client.
# Depended on by both the API (agon_service) and the async worker (agon_worker).
# Deliberately free of any web-framework (poem) dependency.

[dependencies]
thiserror = "1.0.64"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
# Timer (backoff between DynamoDB batch-retry attempts) + sync (cached FCM
# OAuth2 token, guarded by a RwLock in `push`).
tokio = { version = "1", features = ["time", "sync"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Signs the FCM service-account JWT bearer assertion (RS256) for the OAuth2
# token exchange in `push`. Same version already pinned in agon_service.
jsonwebtoken = "9.3.1"

# Observability: OTLP export of logs, traces and metrics. `telemetry::init`
# wires the `tracing` ecosystem to an OTLP collector (Grafana Alloy in prod);
# both binaries call it at startup. See docs/observability.md.
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.32"
