[package]
name = "agon_service"
version = "0.1.0"
edition = "2024"

[dependencies]
agon_core = { path = "../agon_core" }
poem = "3"
poem-openapi = { version = "5", features = ["scalar", "chrono"] }
openssl = { version = "0.10" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "1.0.64"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
clap = { version = "4.5.37", features = ["derive"] }
cron = "0.15.0"
