[package]
name = "agon_service"
version = "0.1.0"
edition = "2024"

[dependencies]
agon_core = { path = "../agon_core" }
poem = "3"
poem-openapi = { version = "5", features = ["scalar", "chrono"] }
# CloudFront signed-URL generation (RSA-SHA1 over the canned policy) uses openssl.
openssl = { version = "0.10" }
# S3 presigned PUT for asset uploads. `aws-config` loads the ambient credentials
# (same as agon_core's DAO); `aws-sdk-s3` builds the presigned request.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "1.0.64"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
base64 = "0.22.1"
tracing = "0.1.41"
# Subscriber setup + OTLP export is centralised in agon_core::telemetry.
# The request metrics middleware records instruments on the global meter.
opentelemetry = "0.32"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5.37", features = ["derive"] }
cron = "0.15.0"
