[package]
name = "agon_tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
openapi = { path = "../openapi_client" }
uuid = { version = "1.16.0", features = ["v4"] }


