# Own workspace, separate from the shippable root workspace, so a clean checkout
# / Docker build of the service or worker never references the generated
# (gitignored) openapi_client. This is a single-package workspace; openapi_client
# is pulled in as an external path dependency (below), which does NOT require it
# to be a workspace member. Run tests via
# `cargo test --manifest-path agon_tests/Cargo.toml`.
[workspace]

[package]
name = "agon_tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
chrono = "0.4"
jsonwebtoken = "9.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
openapi = { path = "../openapi_client" }
uuid = { version = "1.16.0", features = ["v4"] }
