[package]
name = "agon_worker"
version = "0.1.0"
edition = "2024"

# The async processing worker. Long-polls the SQS queue fed by DynamoDB Streams
# (via an EventBridge Pipe) and runs inline handlers: search indexing
# (Meilisearch) and notification generation.
#
# Multi-step orchestration (feed fan-out, the accept-invitation saga) lives in
# the `temporal` module behind the OFF-BY-DEFAULT `temporal` feature. That code
# targets the Temporal Rust SDK Public Preview — a churning git dependency with
# no crates.io release — so it is gated to keep the default build (the verified
# inline worker) green. Enable with `--features temporal` once the SDK revision
# is pinned and reconciled. See docs/async-design.md.
#
# Shares the DynamoDB data-access layer with the API via agon_core. No poem.

[features]
default = []
# Enables the Temporal worker + client (feed fan-out, accept-invitation saga).
# UNVERIFIED against a specific SDK revision — see src/temporal/mod.rs.
temporal = [
    "dep:temporalio-sdk",
    "dep:temporalio-client",
    "dep:temporalio-sdk-core",
    "dep:temporalio-macros",
    "dep:temporalio-workflow",
    "dep:temporalio-common",
]

[dependencies]
agon_core = { path = "../agon_core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
# Deserializes DynamoDB Streams images (attribute-value JSON) straight into the
# shared record structs — same crate agon_core uses for item (de)serialization.
serde_dynamo = "4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.64"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
futures = "0.3"

# Temporal Rust SDK — optional, only pulled in by the `temporal` feature.
temporalio-sdk = { version = "0.5.0", optional = true }
temporalio-client = { version = "0.5.0", optional = true }
temporalio-sdk-core = { version = "0.5.0", optional = true }
temporalio-macros = { version = "0.5.0", optional = true }
# Referenced by the workflow/activity macro expansions (`::temporalio_workflow::…`)
# and for the WorkflowIdConflictPolicy enum, so both must be direct deps.
temporalio-workflow = { version = "0.5.0", optional = true }
temporalio-common = { version = "0.5.0", optional = true }
