[package]
name = "agon_worker"
version = "0.1.0"
edition = "2024"

# The async processing worker. Long-polls the SQS queue fed by DynamoDB Streams
# (via an EventBridge Pipe) and runs inline handlers: search indexing
# (Meilisearch) and notification generation.
#
# Multi-step orchestration (feed fan-out, the accept-invitation saga) lives in
# the `temporal` module and runs a Temporal worker alongside the consumer loop
# in this same binary. See docs/async-design.md.
#
# Shares the DynamoDB data-access layer with the API via agon_core. No poem.

[dependencies]
agon_core = { path = "../agon_core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
# Deserializes DynamoDB Streams images (attribute-value JSON) straight into the
# shared record structs — same crate agon_core uses for item (de)serialization.
serde_dynamo = "4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.64"
tracing = "0.1.41"
# Subscriber setup + OTLP export is centralised in agon_core::telemetry.
futures = "0.3"

# Temporal Rust SDK (durable orchestration for the multi-step async work).
temporalio-sdk = "0.5.0"
temporalio-client = "0.5.0"
temporalio-sdk-core = "0.5.0"
temporalio-macros = "0.5.0"
# Referenced by the workflow/activity macro expansions (`::temporalio_workflow::…`)
# and for the WorkflowIdConflictPolicy enum, so both must be direct deps.
temporalio-workflow = "0.5.0"
temporalio-common = "0.5.0"
